# NotebrainAI

./: .gitignore  README.md  launch.bat  package.json
apps/web/: package.json  pnpm-lock.yaml
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/(app)/: layout.tsx
apps/web/src/app/(app)/dashboard/: page.tsx
apps/web/src/app/(app)/notebook/[id]/: page.tsx
apps/web/src/components/chat/: ChatConfigDialog.tsx  ChatPanel.tsx
apps/web/src/components/layout/: EditableTitle.tsx  ShareDialog.tsx
apps/web/src/components/sources/: SourcePanel.tsx  UploadDialog.tsx
apps/web/src/components/studio/: GenerationCard.tsx  LiveAssistant.tsx  StudioItemMenu.tsx  StudioPanel.tsx
apps/web/src/components/ui/: dropdown-menu.tsx  tooltip.tsx
apps/web/src/hooks/: use-chat.ts
apps/web/src/lib/: api.ts
apps/web/src/stores/: chat.ts  generation.ts  notebook.ts  sources.ts
docker/: docker-compose.yml
services/backend/: .env.example  pyproject.toml
services/backend/app/: main.py
services/backend/app/api/routes/: auth.py  chat.py  generation.py  live.py  notebooks.py  research.py  sources.py
services/backend/app/core/: config.py
services/backend/app/models/: notebook.py
services/backend/app/services/llm/: live_provider.py  provider.py
services/backend/app/services/parsing/: parser.py
services/backend/app/services/rag/: chunker.py  embedder.py  pipeline.py  retriever.py
