[project]
name = "notebrainai-backend"
version = "0.1.0"
description = "NotebrainAI Backend - AI-powered document intelligence"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic-settings>=2.7.0",
    "python-multipart>=0.0.20",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "sse-starlette>=2.2.0",
    "httpx>=0.28.0",
    "anthropic>=0.52.0",
    "cohere>=5.14.0",
    "qdrant-client>=1.14.0",
    "llama-index>=0.12.0",
    "langgraph>=0.3.0",
    "docling>=2.25.0",
    "marker-pdf>=1.6.0",
    "python-pptx>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
